tests/src/frontend/typechecking/invalid/readonly_method_in_immutable_class.sk
class Foo() {
  readonly fun foo(): void {
    void
  }
}
